--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
+    "react-mobile-picker": "^0.1.13",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
+    "react-select-multi": "^1.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
