--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^10.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-infinite-scroller": "^1.2.4",
     "react-mobile-picker": "^0.1.13",
     "react-scripts": "5.0.0",
