--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-infinite-scroller": "^1.2.4",
-    "react-mobile-picker": "^0.1.13",
+    "react-paginate": "^8.1.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
