--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-paginate": "^8.1.2",
     "react-reveal": "^1.2.2",
