--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-paginate": "^8.1.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "react-select": "^5.2.2",
     "react-select-multi": "^1.6.2",
     "web-vitals": "^2.1.4"
