--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.5",
     "react-paginate": "^8.1.2",
     "react-reveal": "^1.2.2",
